--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: node_js
 node_js:
   - "node"
 
+
 install:
   - npm install
+before_script: 
+  - chmod 777 ./node_modules/.bin/jest
 script:
   - npm test
